# nonebot-plugin-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: publish_to_pypi.yaml
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  data.py  handle.py  parser.py  typing.py
